# practi

./: CMakeLists.txt
VSE_LABI/lb1/lb1/: CMakeLists.txt  task3.c  task5_main.c  task6_main.c  task7_main.c
VSE_LABI/lb1/lb1/8/: CMakeLists.txt
VSE_LABI/lb2/lb2/: CMakeLists.txt
VSE_LABI/lb3/Solution1/do_while/: CMakeLists.txt
VSE_LABI/lb3/Solution1/if/: CMakeLists.txt
VSE_LABI/lb3/Solution1/while/: CMakeLists.txt
